Fixed styling of login/registration page and buttons on mobile screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,10 +24,13 @@ body {
     background-color: rgba(22, 219, 101, .25);
 }
 
+.welcome-text {
+    z-index: 9999;
+    font-weight: bold;
+}
+
 .footer {
     height: 150px;
-    position: relative;
-    bottom: 0;
 }
 
 .social-networks {
@@ -300,5 +303,57 @@ input[name='q']::placeholder {
     body {
         height: calc(100vh - 116px);
     }
-}
 
+    .display-4.logo-font.text-black {
+        font-size: 2rem;
+    }
+
+    .nav-link {
+        padding: 0.15rem;
+    }
+
+    .nav-link i.fa-lg {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: .6rem .6rem;
+        font-size: 1rem;
+    }
+
+    #delivery-banner h4 {
+        font-size: 1rem;
+    }
+
+    .welcome-text {
+        font-size: 1.5rem;
+    }
+
+    .footer h4 {
+        font-size: 1rem;
+    }
+
+    .social-networks i {
+        font-size: 1.5rem;
+    }
+
+    .shop-now-button.btn.btn-lg.rounded-0 {
+        padding: .375rem .375rem;
+        font-size: 1rem;
+    }
+
+    .btn.btn-black.border-black.rounded-0,
+    .btn.btn-white.border-black.rounded-0 {
+        padding: .375rem .375rem;
+    }
+
+    .btn.btn-black.border-black.rounded-0.btn-lg,
+    .btn.btn-white.border-black.rounded-0.btn-lg {
+        padding: .375rem .375rem;
+        font-size: .75rem;
+    }
+
+    .increment-qty, .decrement-qty{
+        padding: .25rem .25rem !important;
+    }
+}
